[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://FatigueMental.gd" type="Script" id=2]

[node name="FatigueMental" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 37.5
margin_right = -312.0
margin_bottom = -37.5
rect_min_size = Vector2( 400, 525 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 3.0
margin_right = 397.0
margin_bottom = 522.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 30.0
margin_right = 371.0
margin_bottom = 488.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question9" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 336.0
margin_bottom = 14.0
text = "Do you have difficulty concentrating?"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 336.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider9" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 336.0
margin_bottom = 69.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question10" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 336.0
margin_bottom = 87.0
text = "Do you have problems thinking clearly?"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 91.0
margin_right = 336.0
margin_bottom = 107.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider10" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 111.0
margin_right = 336.0
margin_bottom = 142.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question11" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 146.0
margin_right = 336.0
margin_bottom = 160.0
text = "Do you make slips of the tongue while speaking?"

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 164.0
margin_right = 336.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider11" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 336.0
margin_bottom = 215.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question12" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 219.0
margin_right = 336.0
margin_bottom = 233.0
text = "Do you find it more difficult to find the correct word?"

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 237.0
margin_right = 336.0
margin_bottom = 253.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider12" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 257.0
margin_right = 336.0
margin_bottom = 288.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question13" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 292.0
margin_right = 336.0
margin_bottom = 306.0
text = "How is your memory?"

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 310.0
margin_right = 336.0
margin_bottom = 326.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider13" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 330.0
margin_right = 336.0
margin_bottom = 361.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question14" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 365.0
margin_right = 336.0
margin_bottom = 379.0
text = "Have you lost interest in the things you used to do?"

[node name="HBoxContainer11" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 383.0
margin_right = 336.0
margin_bottom = 399.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider14" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer11"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer12" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 403.0
margin_right = 336.0
margin_bottom = 434.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_left = 158.0
margin_right = 246.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer12"]
margin_left = 250.0
margin_right = 322.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="HBoxContainer13" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 438.0
margin_right = 336.0
margin_bottom = 458.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 94.0
margin_right = 136.0
margin_bottom = 20.0
text = "Back"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 140.0
margin_right = 190.0
margin_bottom = 20.0
text = "Finish"

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer13"]
margin_left = 194.0
margin_right = 242.0
margin_bottom = 20.0
text = "Menu"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider9" to="." method="_on_HSlider9_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider10" to="." method="_on_HSlider10_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider11" to="." method="_on_HSlider11_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider12" to="." method="_on_HSlider12_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider13" to="." method="_on_HSlider13_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer11/HSlider14" to="." method="_on_HSlider14_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer13/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer13/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer13/MenuButton" to="." method="_on_MenuButton_pressed"]
